# geojson-modelica-translator-examples

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE.md  README.rst  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yml
examples/dhc/mixed/: system_params.json
examples/dhc/spawn/: spawn_system_params_ex1.json
examples/spawn_two_buildings/: RefBldgSmallOfficeNew2004_Chicago.idf  spawn_system_params.json
examples/time_series_5g/: time_series_5g_sys_params.json
examples/uo_example_project/: geojson_13_buildings.json
examples/uo_teaser_project/: geojson_11_buildings.json  geojson_13_buildings.json  geojson_8_buildings.json  geojson_8_system_params.json
examples/workflow_demo/: USA_NY_Buffalo-Greater.Buffalo.Intl.AP.725280_TMY3.epw  USA_NY_Buffalo-Greater.Buffalo.Intl.AP.725280_TMY3.mos  demo_sys_params.json  readme.md
scripts/: inspect_results.ipynb
tests/: base_test_case.py  test_cli_commands.py  test_spawn_two_buildings.py  test_time_series_5g.py  test_uo_example_project.py  test_uo_teaser_project.py
workflow_demo/: readme.md
