[tool.poetry]
name = "geojson-modelica-translator-examples"
version = "0.1.0"
description = "Example projects for GeoJSON to Modelica Translator (URBANopt DES)"
authors = ["URBANopt DES Team <nicholas.long@nrel.gov>"]

readme = "README.rst"

homepage = "https://docs.urbanopt.net"
repository = "https://github.com/urbanopt/geojson-modelica-translator-examples"
documentation = "https://docs.urbanopt.net/geojson-modelica-translator/"

[tool.poetry.dependencies]
python = "^3.7"
# geojson-modelica-translator = "^0.2.2"
geojson-modelica-translator = { path = "../geojson-modelica-translator/", develop = true }
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
autopep8 = "1.5.4"
flake8 = "3.8.3"
nose = "1.3.7"
pre-commit = "2.7.1"
pytest = "6.1.0"
pytest-cov = "2.11.1"
coveralls = "3.0.1"
sphinx = "3.2.1"
sphinx_rtd_theme = "0.5.0"
sphinx-jsonschema = "1.16.7"
toml = "0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
