[tool.poetry]
name = "geojson-modelica-translator-examples"
version = "0.4.0"
description = "Example projects for GeoJSON to Modelica Translator (URBANopt DES)"
authors = ["URBANopt DES Team <nicholas.long@nrel.gov>"]

readme = "README.rst"

homepage = "https://docs.urbanopt.net"
repository = "https://github.com/urbanopt/geojson-modelica-translator-examples"
documentation = "https://docs.urbanopt.net/geojson-modelica-translator/"

[tool.poetry.dependencies]
python = ">=3.7.1, <3.11"
geojson-modelica-translator = "^0.4.0"
# geojson-modelica-translator = { path = "../geojson-modelica-translator/", develop = true }
#geojson-modelica-translator = { git = "https://github.com/urbanopt/geojson-modelica-translator.git", branch = "develop"}
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
autopep8 = "1.6.0"
coveralls = "3.3.1"
pre-commit = "2.20.0"
pytest = "7.1.2"
pytest-cov = "3.0.0"
sphinx = "5.0.1"
sphinx_rtd_theme = "1.0.0"
sphinx-jsonschema = "1.19.1"
toml = "0.10.2"

[tool.isort]
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
