[tool.poetry]
name = "geojson-modelica-translator-examples"
version = "0.4.0"
description = "Example projects for GeoJSON to Modelica Translator (URBANopt DES)"
authors = ["URBANopt DES Team <nicholas.long@nrel.gov>"]

readme = "README.rst"

homepage = "https://docs.urbanopt.net"
repository = "https://github.com/urbanopt/geojson-modelica-translator-examples"
documentation = "https://docs.urbanopt.net/geojson-modelica-translator/"

[tool.poetry.dependencies]
python = ">=3.7.1, <3.11"
geojson-modelica-translator = "^0.4.0"
# geojson-modelica-translator = { path = "../geojson-modelica-translator/", develop = true }
# geojson-modelica-translator = { git = "https://github.com/urbanopt/geojson-modelica-translator.git", branch = "develop"}
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
autopep8 = "~2.0"
coveralls = "~3.3"
pre-commit = "~2.20"
pytest = "~7.2"
pytest-cov = "~4.0"
sphinx = "~5.0"
sphinx_rtd_theme = "~1.0.0"
sphinx-jsonschema = "~1.19"
toml = "~0.10"
ruff = "~0.0.254"
black = "~23.1"

[tool.black]
line-length = 140 # Ruff and Black must have the same line-length setting to work together

# https://github.com/charliermarsh/ruff
[tool.ruff]
fix = true # automatically fix problems if possible
select = ["RUF", "E", "F", "I", "UP", "N", "S", "BLE", "A", "C4", "T10", "ISC", "ICN", "PT",
"Q", "SIM", "TID", "ARG", "DTZ", "PD", "PGH", "PLC", "PLE", "PLR", "PLW", "PIE", "COM"] # Enable these rules
ignore = ["PLR0913", "PLR2004", "PLR0402", "COM812", "COM819", "SIM108", "ARG002"] # except for these specific errors
line-length = 140

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

# https://docs.pytest.org/en/7.1.x/reference/customize.html
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov tests --cov-report term-missing --verbose --capture=no --strict-markers"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
